spacing issues

--- a/static/stylesheets/pages/page_search.css
+++ b/static/stylesheets/pages/page_search.css
@@ -28,7 +28,7 @@
 
 .search-block {
 	padding: 120px 0;
-	padding-top:25em;
+	padding-top:26em;
 	padding-bottom:10px;
 	text-align: center;
 	position: relative;
